src/components/ui/game/game.module.css
.container {
  display: flex;
  justify-content: space-between;
  aspect-ratio: 510 / 475;
  padding: 35px 30px;
  background: rgb(255 255 255 / 7.5%);
  border: 1px solid var(--color-primary-1);
  border-radius: var(--border-radius);
  box-shadow: inset 0 1px 0 rgb(255 255 255 / 30%);

  & .main {
    position: relative;
    width: 238px;
    background: rgb(var(--color-primary-2-rgb) / 84%);
    border-radius: var(--border-radius);
    box-shadow: inset 1px 5px 11px rgb(var(--color-primary-1-rgb) / 71%);

    & button {
      position: absolute;
      bottom: 55px;
      left: 50%;
      transform: translateX(-50%);
    }
  }

  & .sub {
    width: 181px;
    background-color: magenta;
  }

  & .polygon {
    position: absolute;
    top: calc(50% + 15px);
    left: calc(50% + 86px);
    pointer-events: none;
    translate: -50% -50%;
  }
}

